package com.tecsuper.appsupermercado.enums;

public enum EstadoVenta {
  REGISTRADA,
  ANULADA
}
